# gesticle

./: .gitignore  Cargo.toml  README.1  README.md  config.toml  gesticle-settings.glade  gesticle.desktop  install.bash  release.toml
.circleci/: Dockerfile  Makefile  config.yml
deb-assets/: config.toml  gesticle-gui.desktop  gesticle.desktop
deb-assets/maintainer-scripts/: postrm
gesticle-gui/: Cargo.toml  gesticle-settings.glade
gesticle-gui/src/: data.rs  main.rs  old_data.rs
gesticle-lib/: Cargo.toml
gesticle-lib/src/: configuration.rs  dbus.rs  events.rs  gestures.rs  lib.rs
gesticled/: Cargo.toml  README.1  gesticle-gui.desktop  gesticle.desktop  gesticle.sudo
gesticled/src/: main.rs
src/: configuration.rs  events.rs  gestures.rs  gui.rs  main.rs  paths.rs
src/gui/: settings.rs
