[package]
name = "gesticle"
version = "0.1.1"
authors = ["pedro@guedes.pt"]
description= "Configurable libinput gestures deamon"

[dependencies]
input = "0.4.1"
udev = "*"
libc = "*"
nix = "0.9.0"
libxdo = "0.6.0"
libxdo-sys = "0.11.0"
config = "0.9.1"
log = "0.4.1"
simplelog = "0.5.3"
clap = "2.32.0"
dirs = "1.0"

[package.metadata.deb]
assets = [
    ["target/release/gesticle", "usr/bin/", "755"],
    ["gesticle.sudo", "etc/sudoers.d/gesticle", "644"],
    ["gesticle.desktop", "etc/xdg/autostart/", "644"],
    ["README.1", "usr/share/man/man1/gesticle.1", "644"],
    ["config.toml", "etc/gesticle/", "644"]
]
